--- a/atwiki-Project/AtwikiManager/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/atwiki-Project/AtwikiManager/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,5 +1,27 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:choiceMode="singleChoice"
-    android:divider="@android:color/transparent" android:dividerHeight="0dp"
-    android:background="#cccc" tools:context=".NavigationDrawerFragment" />
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/left_drawer"
+    android:layout_width="240dp"
+    android:layout_height="match_parent"
+    android:layout_gravity="left"
+    android:background="#333" >
+
+    <Button
+        android:id="@+id/drawer_button"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:text="drawer button" />
+</LinearLayout>
+
+    <!--
+    <ListView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#cccc"
+        tools:context=".NavigationDrawerFragment" />
+    -->
